# tsetlin-rs

./: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  codecov.yml  reuse.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: cargo-check-no-std.yml  cargo-check-simd.yml  cargo-check.yml  cargo-clippy.yml  cargo-doc.yml  cargo-fmt-nightly.yml  cargo-test-simd.yml  cargo-test.yml  changelog.yml  ci.yml  cleanup.yml  coverage.yml  dependabot-automerge.yml  on-merge.yml  publish.yml  release.yml  test-results.yml
benches/: benchmarks.rs  sparse_benchmarks.rs
examples/: benchmark_advanced.rs  iris.rs  test_weighted.rs  xor.rs
src/: automaton.rs  binary.rs  bitplane.rs  bitwise.rs  clause.rs  clause_bank.rs  config.rs  convolutional.rs  error.rs  feedback.rs  gpu.rs  lib.rs  model.rs  multiclass.rs  parallel.rs  parallel_training.rs  regression.rs  rule.rs  simd.rs  small.rs  sparse.rs  training.rs  utils.rs
src/clause_bank/: eval.rs  feedback.rs  filter.rs  mod.rs  simd.rs  tests.rs
tests/: integration.rs  proptest.rs
